--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <!--<script src="js/task-04.js"></script>-->
 <!--<script src="js/task-05.js"></script>-->
 <!--<script src="js/task-06.js"></script>-->
-<script src="js/task-07.js"></script>
+<!--<script src="js/task-07.js"></script>-->
+<script src="js/task-08.js"></script>
 </html>
